--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,6 +1,14 @@
 {
   "keybindings": {
     "Home": {
+      "<n>": "Switch", // Switch to the notes page
+      "<q>": "Quit", // Quit the application
+      "<Ctrl-d>": "Quit", // Another way to quit
+      "<Ctrl-c>": "Quit", // Yet another way to quit
+      "<Ctrl-z>": "Suspend" // Suspend the application
+    },
+    "Note": {
+      "<h>": "Switch", // Switch to the home page
       "<q>": "Quit", // Quit the application
       "<Ctrl-d>": "Quit", // Another way to quit
       "<Ctrl-c>": "Quit", // Yet another way to quit
