--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/ProHaller/tuidui2"
 
 [dependencies]
 better-panic = "0.3.0"
+chrono = "0.4.39"
 clap = { version = "4.5.20", features = [
     "derive",
     "cargo",
@@ -31,6 +32,7 @@ lazy_static = "1.5.0"
 libc = "0.2.161"
 pretty_assertions = "1.4.1"
 ratatui = { version = "0.29.0", features = ["serde", "macros"] }
+ron = "0.8.1"
 serde = { version = "1.0.211", features = ["derive"] }
 serde_json = "1.0.132"
 signal-hook = "0.3.17"
@@ -41,6 +43,7 @@ tokio-util = "0.7.12"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
+uuid = "1.11.0"
 
 [build-dependencies]
 anyhow = "1.0.90"
