--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,18 +1,24 @@
 {
   "keybindings": {
     "Home": {
-      "<n>": "Switch", // Switch to the notes page
+      "<s>": "Switch", // Switch to the next mode
       "<q>": "Quit", // Quit the application
       "<Ctrl-d>": "Quit", // Another way to quit
       "<Ctrl-c>": "Quit", // Yet another way to quit
       "<Ctrl-z>": "Suspend" // Suspend the application
     },
     "Note": {
-      "<h>": "Switch", // Switch to the home page
+      "<s>": "Switch", // Switch to the next mode
       "<q>": "Quit", // Quit the application
       "<Ctrl-d>": "Quit", // Another way to quit
       "<Ctrl-c>": "Quit", // Yet another way to quit
       "<Ctrl-z>": "Suspend" // Suspend the application
+    },
+  },
+  "styles": {
+    "Home": {
+      "title": "bold light cyan",
+      "select": "red",
     },
   }
 }
