--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ derive_deref = "1.1.1"
 directories = "5.0.1"
 futures = "0.3.31"
 human-panic = "2.0.2"
+itertools = "0.14.0"
 json5 = "0.4.1"
 lazy_static = "1.5.0"
 libc = "0.2.161"
@@ -43,6 +44,7 @@ tokio-util = "0.7.12"
 tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
+tui-markdown = "0.3.1"
 uuid = "1.11.0"
 
 [build-dependencies]
